--- a/index.html
+++ b/index.html
@@ -32,24 +32,29 @@
 
       <section id="networking" class="network-info">
         <div class="card">
-          <h3>DNS Management</h3>
+          <h3>DNS Concept</h3>
           <p>
-            Learn how Domain Name System translates domain names to IP
-            addresses, enabling easy access to websites.
+            DNS (Domain Name System) acts as the internet's phone book,
+            translating human-readable domain names (like google.com) into IP
+            addresses (like 172.217.3.110). This allows users to access websites
+            using memorable names instead of numbers.
           </p>
         </div>
         <div class="card">
           <h3>HTTP/HTTPS</h3>
           <p>
-            Explore the difference between HTTP and HTTPS protocols and why
-            security matters in web communication.
+            HTTP/HTTPS handles web traffic, with HTTPS adding encryption for
+            security
           </p>
         </div>
         <div class="card">
           <h3>IP Addressing</h3>
           <p>
-            Understanding IPv4 and IPv6 addressing schemes and their role in
-            internet communication.
+            IP Address is a unique numerical identifier assigned to each device
+            on a network. IPv4 uses a 32-bit format (e.g., 192.168.1.1), while
+            IPv6 uses a 128-bit format (e.g.,
+            2001:0db8:85a3:0000:0000:8a2e:0370:7334) to accommodate more
+            devices.
           </p>
         </div>
       </section>
