--- a/index.html
+++ b/index.html
@@ -34,27 +34,19 @@
         <div class="card">
           <h3>DNS Concept</h3>
           <p>
-            DNS (Domain Name System) acts as the internet's phone book,
-            translating human-readable domain names (like google.com) into IP
-            addresses (like 172.217.3.110). This allows users to access websites
-            using memorable names instead of numbers.
+            Domain Name System (DNS) is a system that is used to translate human-readable domain names (e.g., google.com) into IP addresses (e.g., 172.217.3.110) This allows users to access websites using memorable names instead of numbers.
           </p>
         </div>
         <div class="card">
           <h3>HTTP/HTTPS</h3>
           <p>
-            HTTP/HTTPS handles web traffic, with HTTPS adding encryption for
-            security
+            HTTP (HyperText Transfer Protocol) is the system that allows web browsers to load websites by communicating with web servers. HTTPS (HyperText Transfer Protocol Secure) is a more secure version of HTTP that encrypts the data being sent, protecting it from hackers and ensuring safer browsing.
           </p>
         </div>
         <div class="card">
           <h3>IP Addressing</h3>
           <p>
-            IP Address is a unique numerical identifier assigned to each device
-            on a network. IPv4 uses a 32-bit format (e.g., 192.168.1.1), while
-            IPv6 uses a 128-bit format (e.g.,
-            2001:0db8:85a3:0000:0000:8a2e:0370:7334) to accommodate more
-            devices.
+            An Internet Protocol (IP) address is a unique numerical label assigned to each device on a network, enabling communication. IPv4 uses a 32-bit format (e.g., 192.168.1.1), while IPv6 uses a 128-bit format (e.g., 2001:0db8:85a3:0000:0000:8a2e:0370:7334) to support a larger number of devices.
           </p>
         </div>
       </section>
